--- a/index.html
+++ b/index.html
@@ -2,8 +2,7 @@
 
 <body>
   <h1>Cody M</h1>
-  <p>My First GitHub Website!</p>
-  <h2>This strawberry ice cream is looking mad sus</h2>
+  <p>My First GitHub Website! This strawberry ice cream is looking mad sus</p>
   <img src="https://content.codecademy.com/articles/github-pages-via-web-app/happy-ice-cream.gif" />
 </body>
 
